--- a/journey.html
+++ b/journey.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="libraries/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
     
 
     <title>Journey</title>
@@ -58,8 +57,7 @@
               <div class="row">
                   <div class="col-sm-6 col-md-4 col-lg-3 card-gap">
                     <div class="card card-journey mx-auto" style="width: 18rem;">
-                        <lottie-player class="mx-auto" src="https://assets5.lottiefiles.com/packages/lf20_wv4mTG.json" 
-                        background="transparent"  speed="1"  style="width: 280px; height: 280px;" loop  autoplay></lottie-player>
+                        <lottie-player class="mx-auto" src="https://assets5.lottiefiles.com/packages/lf20_wv4mTG.json" background="transparent"  speed="1"  style="width: 280px; height: 280px;" loop  autoplay></lottie-player>
                             <div class="card-body" style="margin-top: -50px;">
                                 <h5 class="card-title" style="font-size:18px;">2020 Journey📈</h5>
                                 <hr>
