--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
-<title>2021</title>
+<title>2021 Be Happy</title>
   
 </head>
   <body>
       <section class="navbar-section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <lottie-player class="mx-auto" src="https://assets1.lottiefiles.com/packages/lf20_nKCnOy.json" background="transparent"  speed="1"  style="width: 60px; height: 60px;" loop autoplay></lottie-player>
               
             </a>
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="journey.html">Journey</a>
@@ -55,7 +55,7 @@
                   <lottie-player class="mx-auto" src="https://assets7.lottiefiles.com/packages/lf20_y9tdnqfk.json" background="transparent"  speed="1"  style="width: 400px; height: 400px;" loop  autoplay></lottie-player>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 ml-auto">
-                  <div class="card-body">
+                  <div class="card-body card-index">
                     <h5 class="card-title">2021?😳</h5>
                     <hr>
                     <p class="card-text">aku mau bilang terima kasih banyakk.. 2021 buka lembaran baru mulai plan" kedepannya harus lebih mateng
@@ -75,7 +75,7 @@
           <lottie-player class="mx-auto" src="https://assets10.lottiefiles.com/packages/lf20_hKI5NB.json" background="transparent"  speed="1"  style="width: 150px; height: 150px;" loop  autoplay></lottie-player>
 
         </div>
-        <div class="container" >
+        <div class="" >
           <!-- <lottie-player class="mx-auto" src="https://assets10.lottiefiles.com/packages/lf20_msiffewl.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop  autoplay></lottie-player> -->
           <div data-aos="fade-up" data-aos-duration="1000" class="card card-phone mx-auto" style="width: 18rem;">
             <div class="row">
@@ -83,12 +83,13 @@
                 <lottie-player class="mx-auto" src="https://assets10.lottiefiles.com/packages/lf20_msiffewl.json" background="transparent"  speed="1"  style="width: 350px; height: 350px;" loop  autoplay></lottie-player>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-3 ml-auto">
-                <div class="card-body">
+                <div class="card-body card-index">
                   <h5 class="card-title">Biggest lessons from 2020?😞</h5>
                   <hr>
                   <p class="card-text">
                     pingin mencari petualangan dengan sebuah perubahan, bukan hanya tantangan bagiku.. dunia bakal terus berubah dan berevolusi
-                    begitupun 2021 besok segalanya bisa jadi lebih mudah atau lebih sulit. lek pembicaraan e kita tak rangkum semua ga mari" engkok😐    
+                    begitupun 2021 besok segalanya bisa jadi lebih mudah atau lebih sulit. harus lebih konsisten, optimis, bagi waktunya lebih serius
+                    gak setengah" kalo ngerjain sesuatu   
 
                   </p>
                   <p class="card-text" style=" font-size: 18px; padding: 5px; color: #C4C4C4;">
@@ -100,7 +101,7 @@
 
             </div>                
             </div>
-            <div class="container" style="margin-top: 50px;">
+            <div class="" style="margin-top: 50px;">
               <!-- <lottie-player class="mx-auto" src="https://assets10.lottiefiles.com/packages/lf20_msiffewl.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop  autoplay></lottie-player> -->
               <div data-aos="fade-up" data-aos-duration="1000" class="card card-phone mx-auto" style="width: 18rem;">
                 <div class="row">
@@ -108,7 +109,7 @@
                     <lottie-player class="mx-auto" src="https://assets9.lottiefiles.com/packages/lf20_l2ekftsq.json" background="transparent"  speed="1"  style="width: 400px; height: 400px;" loop  autoplay></lottie-player>
                   </div>
                   <div class="col-sm-6 col-md-4 col-lg-3 ml-auto">
-                    <div class="card-body">
+                    <div class="card-body card-index">
                       <h5 class="card-title">Answering biggest lessons😆</h5>
                       <hr>
                       <p class="card-text">
