--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
         
         <h1 class="text-news">This page isn't available for now.</h1>
         <p class="text-sub">We'll update it as soon as possible</p>
-        <a href="index.html" class="btn btn-primary" style="width: 200px; margin-top: 20px;">Home</a>
+        <a href="index.html" class="btn btn-primary" style="width: 200px; margin-top: 20px;">Home →</a>
         </div>
     </div>
 
